--- a/Learning.Libraries.Project/App.config
+++ b/Learning.Libraries.Project/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="Customers" connectionString="Data Source=WXCNL-3010\SA;Database=Customer;User ID=sa;Passsword=root;"/>
+  </connectionStrings>
 </configuration>
