--- a/Learning.Libraries.Project/App.config
+++ b/Learning.Libraries.Project/App.config
@@ -6,4 +6,7 @@
   <connectionStrings>
     <add name="Customers" connectionString="Data Source=WXCNL-3010\SA;Database=Customers;User Id=sa;Password=root;"/>
   </connectionStrings>
+<appSettings>
+  <add key ="DALTpyeDll" value="Learning.Libraries.DAL.BaseDAL,Learning.Libraries.DAL"/>
+</appSettings>
 </configuration>
